--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.8.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-brands-svg-icons": "^5.8.1",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "bootstrap": "^4.1.3",
+    "classnames": "^2.2.6",
     "history": "^4.7.2",
     "material-design-lite": "^1.3.0",
     "mdbreact": "git+https://oauth2:HzYeaVx4RJSup81e2QfH@git.mdbootstrap.com/mdb/react/re-pro.git",
