--- a/package.json
+++ b/package.json
@@ -9,18 +9,27 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
+    "elliptic": "^6.5.4",
     "history": "^4.7.2",
+    "immer": "^8.0.1",
+    "ini": "^1.3.6",
+    "is-svg": "^4.2.2",
     "material-design-lite": "^1.3.0",
     "mdbreact": "git+https://oauth2:HzYeaVx4RJSup81e2QfH@git.mdbootstrap.com/mdb/react/re-pro.git",
+    "node-notifier": "^8.0.1",
     "react": "^16.5.0",
     "react-bootstrap": "^0.32.4",
+    "react-dev-utils": "^11.0.4",
     "react-dom": "^16.5.0",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "sweetalert-react": "^0.4.11"
+    "sockjs": "^0.3.20",
+    "ssri": "^6.0.2",
+    "sweetalert-react": "^0.4.11",
+    "y18n": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
