--- a/package.json
+++ b/package.json
@@ -7,15 +7,27 @@
     "@fortawesome/free-brands-svg-icons": "^5.8.1",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "acorn": "^6.4.1",
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
+    "dot-prop": "^4.2.1",
     "elliptic": "^6.5.4",
+    "eslint-utils": "^1.4.1",
+    "handlebars": "^4.5.3",
     "history": "^4.7.2",
+    "http-proxy": "^1.18.1",
     "immer": "^8.0.1",
     "ini": "^1.3.6",
     "is-svg": "^4.2.2",
+    "kind-of": "^6.0.3",
+    "lodash": "^4.17.19",
+    "lodash.template": "^4.5.0",
     "material-design-lite": "^1.3.0",
     "mdbreact": "git+https://oauth2:HzYeaVx4RJSup81e2QfH@git.mdbootstrap.com/mdb/react/re-pro.git",
+    "minimist": "^0.2.1",
+    "mixin-deep": "^1.3.2",
+    "node-fetch": "^2.6.1",
+    "node-forge": "^0.10.0",
     "node-notifier": "^8.0.1",
     "react": "^16.5.0",
     "react-bootstrap": "^0.32.4",
@@ -26,10 +38,15 @@
     "react-scripts": "2.0.5",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "serialize-javascript": "^3.1.0",
+    "set-value": "^2.0.1",
     "sockjs": "^0.3.20",
     "ssri": "^6.0.2",
     "sweetalert-react": "^0.4.11",
-    "y18n": "^4.0.1"
+    "webpack-dev-server": "^3.1.11",
+    "websocket-extensions": "^0.1.4",
+    "y18n": "^4.0.1",
+    "yargs-parser": "^13.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
