--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lodash": "^4.17.19",
     "lodash.template": "^4.5.0",
     "material-design-lite": "^1.3.0",
-    "mdbreact": "git+https://oauth2:HzYeaVx4RJSup81e2QfH@git.mdbootstrap.com/mdb/react/re-pro.git",
+    "mdbreact": "^5.0.2",
     "minimist": "^0.2.1",
     "mixin-deep": "^1.3.2",
     "node-fetch": "^2.6.1",
