--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "sockjs": "^0.3.20",
     "ssri": "^6.0.2",
     "sweetalert-react": "^0.4.11",
+    "ua-parser-js": "^0.7.24",
     "webpack-dev-server": "^3.1.11",
     "websocket-extensions": "^0.1.4",
     "y18n": "^4.0.1",
