--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "dot-prop": "^4.2.1",
     "elliptic": "^6.5.4",
     "eslint-utils": "^1.4.1",
-    "handlebars": "^4.5.3",
+    "handlebars": "^4.7.7",
     "history": "^4.7.2",
+    "hosted-git-info": "^2.8.9",
     "http-proxy": "^1.18.1",
     "immer": "^8.0.1",
     "ini": "^1.3.6",
     "is-svg": "^4.2.2",
     "kind-of": "^6.0.3",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.21",
     "lodash.template": "^4.5.0",
     "material-design-lite": "^1.3.0",
     "mdbreact": "^5.0.2",
@@ -43,7 +44,8 @@
     "sockjs": "^0.3.20",
     "ssri": "^6.0.2",
     "sweetalert-react": "^0.4.11",
-    "ua-parser-js": "^0.7.24",
+    "ua-parser-js": "^0.7.22",
+    "url-parse": "^1.5.0",
     "webpack-dev-server": "^3.1.11",
     "websocket-extensions": "^0.1.4",
     "y18n": "^4.0.1",
