--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "acorn": "^6.4.1",
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.9.4",
     "classnames": "^2.2.6",
     "dot-prop": "^4.2.1",
     "elliptic": "^6.5.4",
