--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lodash.template": "^4.5.0",
     "material-design-lite": "^1.3.0",
     "mdbreact": "^5.0.2",
+    "merge": "^2.1.1",
     "minimist": "^0.2.1",
     "mixin-deep": "^1.3.2",
     "node-fetch": "^2.6.1",
