--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-fetch": "^2.6.1",
     "node-forge": "^0.10.0",
     "node-notifier": "^8.0.1",
+    "postcss": "^8.2.10",
     "react": "^16.5.0",
     "react-bootstrap": "^0.32.4",
     "react-dev-utils": "^11.0.4",
