--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "acorn": "^6.4.1",
     "bootstrap": "^4.1.3",
+    "browserslist": "^4.16.5",
     "chart.js": "^2.9.4",
     "classnames": "^2.2.6",
+    "dns-packet": "^1.3.2",
     "dot-prop": "^4.2.1",
     "elliptic": "^6.5.4",
     "eslint-utils": "^1.4.1",
@@ -51,6 +53,7 @@
     "url-parse": "^1.5.0",
     "webpack-dev-server": "^3.1.11",
     "websocket-extensions": "^0.1.4",
+    "ws": "^7.4.6",
     "y18n": "^4.0.1",
     "yargs-parser": "^13.1.2"
   },
