--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "node-fetch": "^2.6.1",
     "node-forge": "^0.10.0",
     "node-notifier": "^8.0.1",
+    "normalize-url": "^4.5.1",
     "postcss": "^8.2.10",
     "react": "^16.5.0",
     "react-bootstrap": "^0.32.4",
