--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "acorn": "^6.4.1",
+    "ansi-regex": "^5.0.1",
     "bootstrap": "^4.1.3",
+    "braces": "^2.3.1",
     "browserslist": "^4.16.5",
     "chart.js": "^2.9.4",
     "classnames": "^2.2.6",
@@ -16,26 +18,30 @@
     "dot-prop": "^4.2.1",
     "elliptic": "^6.5.4",
     "eslint-utils": "^1.4.1",
+    "glob-parent": "^5.1.2",
     "handlebars": "^4.7.7",
     "history": "^4.7.2",
     "hosted-git-info": "^2.8.9",
     "http-proxy": "^1.18.1",
     "immer": "^9.0.6",
     "ini": "^1.3.6",
-    "is-svg": "^4.2.2",
+    "is-svg": "^4.3.0",
+    "json-schema": "^0.4.0",
     "kind-of": "^6.0.3",
     "lodash": "^4.17.21",
     "lodash.template": "^4.5.0",
     "material-design-lite": "^1.3.0",
     "mdbreact": "^5.0.2",
+    "mem": "^4.0.0",
     "merge": "^2.1.1",
-    "minimist": "^0.2.1",
+    "minimist": "^1.2.3",
     "mixin-deep": "^1.3.2",
     "node-fetch": "^2.6.1",
     "node-forge": "^1.0.0",
     "node-notifier": "^8.0.1",
     "normalize-url": "^4.5.1",
-    "postcss": "^8.2.10",
+    "nth-check": "^2.0.1",
+    "postcss": "^8.2.13",
     "react": "^16.5.0",
     "react-bootstrap": "^0.32.4",
     "react-dev-utils": "^11.0.4",
