--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "react-dom": "^16.5.0",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5",
+    "react-scripts": "^5.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "serialize-javascript": "^3.1.0",
@@ -58,7 +58,7 @@
     "sweetalert-react": "^0.4.11",
     "ua-parser-js": "^0.7.22",
     "url-parse": "^1.5.9",
-    "webpack-dev-server": "^3.1.11",
+    "webpack-dev-server": "^4.8.1",
     "websocket-extensions": "^0.1.4",
     "ws": "^6.2.2",
     "y18n": "^4.0.1",
