--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "react-dom": "^16.5.0",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "5.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "serialize-javascript": "^3.1.0",
